--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,20 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<junit.version>3.8.1</junit.version>
+	<mode>DEV</mode>
   </properties>
   
   <build>
 	<finalName>${project.artifactId}</finalName>
+	
+	<!--Activation du remplacement des variables via Maven-->
+	<resources>
+		<resource>
+			<directory>src/main/resources</directory>
+			<filtering>true</filtering>
+		</resource>
+	</resources>
+	
 	<plugins>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
